--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,12 @@ dependencies {
     // cognito
     implementation 'software.amazon.awssdk:cognitoidentityprovider:2.17.81'
 
+	// OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.security:spring-security-oauth2-jose'
+
+	//json
+	implementation 'com.google.code.gson:gson:2.8.7'
 }
 
 tasks.named('bootJar') {
