--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,10 @@ local.properties
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/dataSources.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/modules.xml
 
 # Gradle
 .idea/**/gradle.xml
