--- a/build.gradle
+++ b/build.gradle
@@ -87,9 +87,9 @@ dependencies {
 
 	//json
 	implementation 'com.google.code.gson:gson:2.8.9'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
-	implementation 'com.fasterxml.jackson.core:jackson-core:2.14.0'
-	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0'
+//	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+//	implementation 'com.fasterxml.jackson.core:jackson-core:2.14.0'
+//	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0'
 
 	//Dynamo
 	implementation 'software.amazon.awssdk:dynamodb-enhanced:2.26.19'
