--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,9 @@ dependencies {
 	// cognito
 	implementation 'software.amazon.awssdk:cognitoidentityprovider:2.17.81'
 
+	// APM
+	implementation 'co.elastic.apm:elastic-apm-agent:1.51.0'
+
 }
 
 tasks.named('bootJar') {
@@ -89,3 +92,4 @@ tasks.named('bootJar') {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
